implement products service with admin and user roles